source/stylesheets/cart.sass
@import 'variables'

.cart-overlay
  +transition(all .3s)
  background: $background-color
  bottom: 0
  height: 100vh
  left: 0
  overflow-y: scroll
  padding-top: 100px
  position: fixed
  right: 0
  top: 100vh
  width: 100%
  z-index: 6
  
  > .wrapper
    +flexbox
    padding-top: 100px
    
    @media screen and (max-width: $break-medium)
      padding-top: 50px
  
  &.open
    top: 0
    
.keep-shopping
  +transition(all .3s)
  background: $accent-background-color
  bottom: -100px
  color: $accent-text-color !important
  font-size: 11px
  height: 100px
  left: 0
  letter-spacing: 2px
  line-height: 100px
  padding: 0
  position: absolute
  text-align: left
  top: 0
  width: 100%
  z-index: 6
  
  @media screen and (max-width: $break-large)
    height: 75px
    line-height: 75px
  
  .wrapper
    +flexbox
    +justify-content(flex-start)
    +align-items(center)
    
  .close-icon
    fill: $accent-text-color
    height: 29px
    margin-left: auto
    width: 29px

.cart-page
  +flexbox
  margin-top: 150px
  
  @media screen and (max-width: $break-medium)
    margin-top: 100px
  
.cart-form
  width: 100%
  
.cart-totals
  margin-left: 100px
  width: 400px
  
  @media screen and (max-width: $break-small)
    margin-left: 0
    width: 100%
  
  h3
    font-size: 25px
    letter-spacing: 5px
    line-height: 40px
    margin-bottom: 15px

.cart-item-listing
  max-width: 700px
  width: 100%
  
  .checkout-btn
    display: none
  
  @media screen and (max-width: $break-medium)
    .page-accent
      margin-top: 50px
      max-width: 100%
      
    .checkout-btn
      display: none
  
  @media screen and (max-width: $break-small)
    order: 2
  
.cart-header
  display: none

.cart-items
  list-style: none
  margin: 0
  margin-bottom: 200px
  padding: 0
  max-width: 700px
  width: 100%
  
  @media screen and (max-width: $break-small)
    margin-bottom: 50px
  
.cart-item
  margin-bottom: 50px

.item-top-half
  +flexbox
  +align-items(flex-start)
  +justify-content(flex-start)
  min-height: 100px

.item-delete
  +flex(0 0 50px)
  background-color: $accent-background-color
  cursor: pointer
  height: 100px
  text-align: center
  width: 50px
  
  svg
    +vertical-align
    display: inline-block
    fill: $accent-text-color
    height: 29px
    width: 29px

.item-image
  +flex(0 0 200px)
  background-position: 50%
  background-size: cover
  height: 100px
  width: 200px
  
  @media screen and (max-width: $break-medium)
    +flex(0 0 150px)
    width: 150px

.item-quantity-holder
  margin-left: auto
  width: 50px

input.option-quantity
  +appearance(none)
  background: $background-color
  border: 2px solid $accent-background-color
  color: $text-color
  font-size: 15px
  height: 100px
  text-align: center
  width: 50px
  
.item-bottom-half
  display: none
  padding-top: 25px
  
  @media screen and (max-width: $break-medium)
    +pie-clearfix
    display: block
    
    .item-details-name, .item-details-option
      clear: left
      float: left
      width: 200px
    
  .item-details-price
    float: right

.item-details-price
  color: $secondary-text-color
  font-size: 15px
  letter-spacing: 5px
  line-height: 25px
  
.item-details-name
  font-size: 15px
  letter-spacing: 5px
  line-height: 25px

.item-details-option
  font-size: 15px
  letter-spacing: 5px
  line-height: 25px

.item-top-details
  margin-left: 25px
  max-width: 275px
  
  @media screen and (max-width: $break-medium)
    display: none
  
.cart-total-amount
  color: $secondary-text-color

.cart-discounts-shipping
  margin-top: 40px
  
.cart-shipping + .cart-discounts
  margin-top: 25px

.cart-amount 
  font-size: 13px
  margin-bottom: 15px
  letter-spacing: 2px
  
  span
    color: $secondary-text-color
  
.country-select
  background: $background-color
  border: 2px solid $accent-background-color
  height: 50px
  
  select
    color: $text-color
    
  svg
    fill: $secondary-text-color
    position: relative
    right: 20px
    
  &:hover
    color: $accent-background-color
    border-color: $accent-background-color

    select
      color: $accent-background-color
      
    svg
      fill: $secondary-text-color
    
.cart-discount-status
  +pie-clearfix
  background: $background-color
  border: 2px solid $accent-background-color
  height: 50px
  
  .cart-discount-code
    +appearance(none)
    border: none
    font-size: 11px
    height: 46px
    line-height: 46px
    outline: none
    padding: 0 30px
    width: calc(100% - 46px)
    
  .apply-discount, .cancel-discount
    background: $accent-background-color
    float: right
    font-size: 11px
    height: 46px
    text-align: center
    width: 46px
    
    svg
      +vertical-align
      fill: $accent-text-color
      height: 25px
      width: 25px
      
  .cancel-discount svg
    +transform(translateY(-50%) rotate(45deg))

.checkout-btn
  margin-top: 50px
  
#cart
  header
    display: none
  
  footer
    display: none
  

.cart-split-page
  +flexbox
  +justify-content(flex-start)
  +align-items(flex-start)
  +flex-direction(row)
  
  @media screen and (max-width: $break-small)
    +flex-direction(column)
  

